- Some cleanup before starting the release